fixed collapse links and changed primary color

--- a/css/resume.css
+++ b/css/resume.css
@@ -13,7 +13,7 @@ body {
 @media (min-width: 992px) {
   body {
     padding-top: 0;
-    padding-left: 15rem;
+    padding-left: 12rem;
   }
 }
 
@@ -72,7 +72,7 @@ p.lead {
 }
 
 .social-icons a:hover {
-  background-color: #0f5fc3;
+  background-color: #1776ed;
 }
 
 .dev-icons {
@@ -80,7 +80,7 @@ p.lead {
 }
 
 .dev-icons .list-inline-item i:hover {
-  color: #0f5fc3;
+  color: #1776ed;
 }
 
 #sideNav .navbar-nav .nav-item .nav-link {
@@ -90,7 +90,7 @@ p.lead {
 }
 
 #sideNav .navbar-toggler:focus {
-  outline-color: #2f85ef;
+  outline-color: #5ea0f3;
 }
 
 @media (min-width: 992px) {
@@ -106,7 +106,7 @@ p.lead {
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column;
-    width: 15rem;
+    width: 12rem;
     height: 100vh;
   }
   #sideNav .navbar-brand {
@@ -176,19 +176,19 @@ section.resume-section .resume-item .resume-date {
 }
 
 .bg-primary {
-  background-color: #0f5fc3 !important;
+  background-color: #1776ed !important;
 }
 
 .text-primary {
-  color: #0f5fc3 !important;
+  color: #1776ed !important;
 }
 
 a {
-  color: #0f5fc3;
+  color: #1776ed;
 }
 
 a:hover, a:focus, a:active {
-  color: #0a3c7c;
+  color: #0d53aa;
 }
 
 a:focus, a:active {
