--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -8,6 +8,7 @@ html, body {
   top: 0;
   left: 0;
   z-index: -1;
+  opacity: 0.5;
 }
 
 /* .background {
