--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -26,7 +26,7 @@ $teal:    #20c997 !default;
 $cyan:    #17a2b8 !default;
 
 // $primary:       $blue !default;
-$primary:       #0f5fc3 !default;
+$primary:       #1776ed !default;
 $secondary:     $gray-600 !default;
 $success:       $green !default;
 $info:          $cyan !default;
@@ -37,4 +37,4 @@ $dark:          $gray-800 !default;
 
 // Page Variables
 
-$sidebar-base-width: 15rem;
+$sidebar-base-width: 12rem;
